--- a/demos/package.json
+++ b/demos/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.0.0",
+    "@swimlane/ngx-datatable": "^14.0.0",
     "cordova": "^8.1.2",
     "cordova-android": "7.1.4",
     "cordova-plugin-device": "^2.0.2",
