--- a/demos/package.json
+++ b/demos/package.json
@@ -36,6 +36,7 @@
     "core-js": "^2.5.4",
     "file-saver": "^2.0.0",
     "lodash": "^4.17.11",
+    "ngx-datatable": "^1.0.3",
     "rxjs": "~6.3.3",
     "xlsx": "^0.14.1",
     "zone.js": "~0.8.29"
