--- a/demos/package.json
+++ b/demos/package.json
@@ -34,6 +34,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
+    "crypto-json": "^2.0.2",
     "file-saver": "^2.0.0",
     "lodash": "^4.17.11",
     "ngx-datatable": "^1.0.3",
