--- a/rfidQbe/package.json
+++ b/rfidQbe/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "demos",
-  "version": "0.0.1",
+  "name": "ionic-app-base",
+  "version": "0.0.0",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
@@ -19,32 +19,13 @@
     "@angular/http": "^7.2.2",
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
-    "@angular/pwa": "^0.13.4",
     "@angular/router": "^7.2.2",
-    "@angular/service-worker": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
-    "@ionic-native/secure-storage": "^5.2.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.0.0",
-    "@ionic/storage": "^2.2.0",
-    "@swimlane/ngx-datatable": "^14.0.0",
-    "cordova": "^8.1.2",
-    "cordova-android": "7.1.4",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^3.1.2",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
-    "crypto-json": "^2.0.2",
-    "file-saver": "^2.0.0",
-    "lodash": "^4.17.11",
-    "ngx-datatable": "^1.0.3",
-    "ngx-logger": "^3.3.11",
     "rxjs": "~6.3.3",
-    "xlsx": "^0.14.1",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
@@ -52,11 +33,11 @@
     "@angular-devkit/build-angular": "~0.12.3",
     "@angular-devkit/core": "~7.2.3",
     "@angular-devkit/schematics": "~7.2.3",
-    "@angular/cli": "7.3.4",
+    "@angular/cli": "7.2.4",
     "@angular/compiler": "~7.2.2",
     "@angular/compiler-cli": "~7.2.2",
     "@angular/language-service": "~7.2.2",
-    "@ionic/angular-toolkit": "~1.3.0",
+    "@ionic/angular-toolkit": "~1.4.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~10.12.0",
@@ -72,21 +53,5 @@
     "ts-node": "~8.0.0",
     "tslint": "~5.12.0",
     "typescript": "~3.1.6"
-  },
-  "description": "An Ionic project",
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-whitelist": {},
-      "cordova-plugin-statusbar": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
-      "cordova-plugin-ionic-keyboard": {}
-    },
-    "platforms": [
-      "android"
-    ]
   }
 }
