--- a/demos/package.json
+++ b/demos/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^7.2.2",
     "@angular/service-worker": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/device": "^5.3.0",
     "@ionic-native/secure-storage": "^5.2.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -31,6 +32,7 @@
     "@swimlane/ngx-datatable": "^14.0.0",
     "cordova": "^8.1.2",
     "cordova-android": "7.1.4",
+    "cordova-browser": "5.0.4",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^3.1.2",
@@ -86,7 +88,8 @@
       "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
