--- a/rfidQbe/package.json
+++ b/rfidQbe/package.json
@@ -23,9 +23,11 @@
     "@angular/router": "^7.2.2",
     "@angular/service-worker": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/secure-storage": "^5.3.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.0.0",
+    "@ionic/storage": "^2.2.0",
     "core-js": "^2.5.4",
     "file-saver": "^2.0.1",
     "ion2-calendar": "^3.0.0-rc.0",
